force-app/main/default/objects/Cycle_Steps__c/Cycle_Steps__c.object-meta.xml
<CustomObject>
    <label>Cycle Steps</label>
    <nameField>
        <label>Cycle Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cycle Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>