force-app/main/default/objects/Cycle_Steps__c/fields/BHCG_Upper_Paramater__c.field-meta.xml
<CustomField>
    <fullName>BHCG_Upper_Paramater__c</fullName>
    <label>BHCG Upper Paramater</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>