force-app/main/default/objects/Cycle_Steps__c/fields/Cycle_Step_Date__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Step_Date__c</fullName>
    <formula>CASE(
    LEN(TEXT(MONTH(Cycle__r.Day_1__c + Cycle_Step_Day__c - 1))),
    1, TEXT(DAY(Cycle__r.Day_1__c + Cycle_Step_Day__c - 1)) &amp; &quot;/0&quot; &amp; TEXT(MONTH(Cycle__r.Day_1__c + Cycle_Step_Day__c - 1)) &amp; &quot;/&quot; &amp; TEXT(YEAR(Cycle__r.Day_1__c + Cycle_Step_Day__c - 1)),
    2, TEXT(DAY(Cycle__r.Day_1__c + Cycle_Step_Day__c - 1)) &amp; &quot;/&quot; &amp; TEXT(MONTH(Cycle__r.Day_1__c + Cycle_Step_Day__c - 1)) &amp; &quot;/&quot; &amp; TEXT(YEAR(Cycle__r.Day_1__c + Cycle_Step_Day__c - 1)),
    &quot;Invalid Date&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cycle Step Date</label>
    <type>Text</type>
</CustomField>