force-app/main/default/objects/Cycle_Steps__c/fields/Cycle_Step_Day__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Step_Day__c</fullName>
    <description>Day of Cycle Step</description>
    <label>Cycle Step Day</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>