force-app/main/default/objects/Cycle_Steps__c/fields/Day_of_Week__c.field-meta.xml
<CustomField>
    <fullName>Day_of_Week__c</fullName>
    <formula>CASE(
  MOD(Cycle__r.Day_1__c + Cycle_Step_Day__c -1 - DATE(1980,6,1), 7), 
  0 , &quot;Sunday&quot;, 
  1 , &quot;Monday&quot;, 
  2 , &quot;Tuesday&quot;, 
  3 , &quot;Wednesday&quot;, 
  4 , &quot;Thursday&quot;, 
  5 , &quot;Friday&quot;, 
  6 , &quot;Saturday&quot;, 
  &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day of Week</label>
    <type>Text</type>
</CustomField>