force-app/main/default/objects/Cycle_Steps__c/fields/E2_Lower_Paramater__c.field-meta.xml
<CustomField>
    <fullName>E2_Lower_Paramater__c</fullName>
    <label>E2 Lower Paramater</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>