force-app/main/default/objects/Cycle_Steps__c/fields/FSH_Lower_Paramater__c.field-meta.xml
<CustomField>
    <fullName>FSH_Lower_Paramater__c</fullName>
    <label>FSH Lower Paramater</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>