force-app/main/default/objects/Cycle_Steps__c/fields/LH_Lower_Paramater__c.field-meta.xml
<CustomField>
    <fullName>LH_Lower_Paramater__c</fullName>
    <label>LH Lower Paramater</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>