force-app/main/default/objects/Cycle_Steps__c/fields/P4_Lower_Paramater__c.field-meta.xml
<CustomField>
    <fullName>P4_Lower_Paramater__c</fullName>
    <label>P4 Lower Paramater</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>