force-app/main/default/objects/Cycle_Steps__c/fields/Step_Notes__c.field-meta.xml
<CustomField>
    <fullName>Step_Notes__c</fullName>
    <label>Step Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>