force-app/main/default/objects/Cycle_Steps__c/fields/Step_Type__c.field-meta.xml
<CustomField>
    <fullName>Step_Type__c</fullName>
    <label>Step Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blood Test</fullName>
            </value>
            <value>
                <fullName>Scan</fullName>
            </value>
            <value>
                <fullName>Blood and Scan</fullName>
            </value>
            <value>
                <fullName>Medication</fullName>
            </value>
            <value>
                <fullName>Pregnancy Test</fullName>
            </value>
            <value>
                <fullName>Procedure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>